<resources>
    <string name="app_name">VideoSearch</string>
    <string name="menu">Меню</string>
    <string name="favourites">Избранное</string>
    <string name="posmotret_pozzhe">Посмотреть позже</string>
    <string name="podborki">Подборки</string>
    <string name="settings">Настройки</string>
    <string name="site_posters">Постеры предоставлены Google.com</string>
    <string name="menu_favorites_title">\"Избранное\"</string>
    <string name="menu_watch_later_title">\"Посмотреть позже\"</string>
    <string name="menu_podborki_title">\"Подборки\"</string>
    <string name="second_animation">Второй способ</string>
    <string name="third_animation">Третий способ</string>

</resources>