<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/site_posters"
        app:layout_constraintTop_toBottomOf="@+id/posters_cardview"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/posters_cardview"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="50dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:elevation="100dp"
        >

        <LinearLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4CAF50"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fight_club" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/unnamed" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/law_abiding_citizen" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/outer_menu"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:background="@drawable/corner_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="15dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            >

            <Button
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu"
                android:background="?selectableItemBackgroundBorderless"
                />

            <Button
                android:id="@+id/favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favourites"
                android:background="?selectableItemBackgroundBorderless"/>

            <Button
                android:id="@+id/posmotret_pozzhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posmotret_pozzhe"
                android:background="?selectableItemBackgroundBorderless"/>

            <Button
                android:id="@+id/podborki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/podborki"
                android:background="?selectableItemBackgroundBorderless"/>

            <Button
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings"
                android:background="?selectableItemBackgroundBorderless"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>